add planManager tests